--- a/views/analysis.jade
+++ b/views/analysis.jade
@@ -9,6 +9,7 @@ html(lang="en")
 		script(src="/javascripts/react.js")
 		script(src="/javascripts/react-dom.js")
 		script(src="/javascripts/browser.min.js")
+		script(src='/javascripts/moment.js')
 		script(type="text/babel", src="/javascripts/analysisApp.js")
 	body
 		div#content
