--- a/public/stylesheets/style_analysis.css
+++ b/public/stylesheets/style_analysis.css
@@ -62,3 +62,18 @@ body {
 	margin-right: -15px !important;
 	text-align: right;
 }
+
+.help {
+	text-align: center;
+	font-size: 11px;
+	/*border: solid 1px;*/
+	padding: 8px;
+	/*border-radius: 4px;*/
+	border-bottom: solid 1px #D2D49A;
+	border-top: solid 1px #D2D49A;
+
+	background-color: #FDFFB9;
+	margin-left: -15px;
+	margin-right: -15px;
+	margin-bottom: 20px;
+}
