Added new dashboard

--- a/views/analysis.jade
+++ b/views/analysis.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
 	head
 		title= pageTitle
+		link(rel="icon", type="image/png", href="/favicon.png")
 		link(rel="stylesheet", href="/stylesheets/bootstrap.css")
 		link(rel="stylesheet", href="/stylesheets/style_analysis.css")
 		script(src="/javascripts/jquery-1.12.3.js")
