--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,22 +2,15 @@ doctype html
 html(lang="en")
 	head
 		title= pageTitle
+		link(rel="icon", type="image/png", href="/favicon.png")
 		link(rel="stylesheet", href="/stylesheets/bootstrap.css")
-		link(rel="stylesheet", href="/stylesheets/style.css")
+		link(rel="stylesheet", href="/stylesheets/enter-style.css")
 		script(src="/javascripts/jquery-1.12.3.js")
 		script(src="/javascripts/bootstrap.min.js")
 	body
-		div.page-header
-			div(class="nav nav-pills")
-				if user
-					li 
-						a(href="")= 'Hi, ' + user.name
-					li
-						a(href="#") Play
-					li
-						a(href="/logout") Logout
-				else
-					li 
-						a(href="#") Hey there, how you doin?
-		block content
+		nav(class="navbar navbar-default navbar-fixed-top green-header")
+			div(class="container") 
+				a(class="navbar-brand hello" href="#") Hey! how you doin?
+		div.cont
+			block content
 
