--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html(lang="en")
 	body
 		nav(class="navbar navbar-default navbar-fixed-top green-header")
 			div(class="container") 
-				a(class="navbar-brand hello" href="#") Hey! how you doin?
+				a(class="navbar-brand hello" href="#") Dashboard login
 		div.cont
 			block content
 
