Added polyfill for find() function

--- a/views/rdfui.jade
+++ b/views/rdfui.jade
@@ -5,6 +5,7 @@ html(lang="en")
 		title= pageTitle
 		link(rel="stylesheet", href="/stylesheets/bootstrap.css")
 		link(rel="stylesheet", href="/stylesheets/style.css")
+		script(src='/javascripts/polyfills.js')
 		script(src="/javascripts/jquery-1.12.3.js")
 		script(src="/javascripts/bootstrap.min.js")
 		script(src="/javascripts/react.js")
