--- a/views/analysis.jade
+++ b/views/analysis.jade
@@ -5,6 +5,8 @@ html(lang="en")
 		link(rel="icon", type="image/png", href="/favicon.png")
 		link(rel="stylesheet", href="/stylesheets/bootstrap.css")
 		link(rel="stylesheet", href="/stylesheets/style_analysis.css")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
+		script(src='/javascripts/polyfills.js')
 		script(src="/javascripts/jquery-1.12.3.js")
 		script(src="/javascripts/bootstrap.min.js")
 		script(src="/javascripts/react.js")
