--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -6,6 +6,7 @@ html(lang="en")
 		link(rel="stylesheet", href="/stylesheets/bootstrap.css")
 		link(rel="stylesheet", href="/stylesheets/frontstyle.css")
 		link(rel="stylesheet", href="/stylesheets/style.css")
+		script(src='/javascripts/polyfills.js')
 		script(src="/javascripts/jquery-1.12.3.js")
 		script(src="/javascripts/bootstrap.min.js")
 		script(src="/javascripts/react.js")
