--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,12 @@ html(lang="en")
 		title= pageTitle
 		link(rel="icon", type="image/png", href="/favicon.png")
 		link(rel="stylesheet", href="/stylesheets/bootstrap.css")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
 		link(rel="stylesheet", href="/stylesheets/enter-style.css")
+		script(src='/javascripts/polyfills.js')
 		script(src="/javascripts/jquery-1.12.3.js")
 		script(src="/javascripts/bootstrap.min.js")
+
 	body
 		nav(class="navbar navbar-default navbar-fixed-top green-header")
 			div(class="container") 
