--- a/views/newDashboard.jade
+++ b/views/newDashboard.jade
@@ -6,6 +6,8 @@ html(lang="en")
 		link(rel="stylesheet", href="/stylesheets/bootstrap.css")
 		link(rel="stylesheet", href="/stylesheets/dashboard-style.css")
 		link(rel="stylesheet", href="/stylesheets/style.css")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
+		script(src='/javascripts/polyfills.js')
 		script(src="/javascripts/jquery-1.12.3.js")
 		script(src="/javascripts/bootstrap.min.js")
 		script(src="/javascripts/react.js")
