Last minute changes

--- a/views/enter.jade
+++ b/views/enter.jade
@@ -13,10 +13,10 @@ block content
 				h3 Please enter your credentials
 				form(action='/users/signin', method='POST', role='form')
 					div.form-group
-						label Username:
+						label Username
 						input(type='text', name='user', class='form-control green-border', placeholder='Username')
 					div.form-group
-						label Password:
+						label Password
 						input(type='password', name='pwd', class='form-control green-border', placeholder='Password')
 					div.form-group
 						input(type='submit', value='Sign in', class='btn btn-default greenish')
